# splice-wallet-kernel

./: .commitlintrc.js  .commitlintrc.json  .editorconfig  .eslintignore  .gitignore  .nxignore  .prettierignore  .yarnrc.yml  CODEOWNERS  Dockerfile  README.md  buf.gen.yaml  buf.yaml  canton-bootstrap.canton  canton.conf  create_ping_prepare_request.json  create_ping_prepare_response.json  dapp-rpc-generator-config.json  ecosystem.ci.config.js  ecosystem.config.ci.js  ecosystem.config.js  eslint.config.mjs  flake.nix  header.txt  nx.json  package-lock.json  package.json  pr-description.md  protoc-gen-ts-proto  rpc-generator-config-dapp-remote.json  rpc-generator-config-dapp.json  rpc-generator-config-keystore.json  rpc-generator-config-signing.json  rpc-generator-config-user.json  rpc-generator-dapp.json  tsconfig.base.json  tsconfig.node.json  tsconfig.web.json  tsup.base.d.ts  tsup.base.d.ts.map  (+2 more)
docs/dapp-building/: README.md  conf.py  pyproject.toml
docs/dapp-building/dapp-sdk/: api-reference.md  best-practices.md  discovery.md  index.md  installation.md  provider.md  usage.md
docs/dapp-building/examples/: index.md
docs/dapp-building/examples/json/: default-config.json
docs/dapp-building/overview/: index.md
docs/dapp-building/src/: index.md
docs/dapp-building/src/dapp-sdk/: api-reference.rst  index.md  installation.md  usage.md
docs/dapp-building/src/examples/: index.md  (+1 more)
docs/dapp-building/wallet-gateway/: index.md
docs/wallet-integration-guide/: README.md  conf.py  pyproject.toml
docs/wallet-integration-guide/_extensions/: before_after.py
docs/wallet-integration-guide/_static/: custom.css
docs/wallet-integration-guide/examples/: 01-auth.ts  02-auth-localnet.ts  03-ping-localnet.ts  config.ts  jest.config.ts  package.json  snippets.test.ts  tsconfig.json  vitest.config.ts
docs/wallet-integration-guide/external-docs/: index.rst
docs/wallet-integration-guide/src/: index.rst
(+2493 files in other folders)
