[tool.poetry]
name = "dapp-building"
version = "0.1.0"
description = "A guide for developing dapps using the dApp SDK and Wallet Gateway"
authors = ["Phillip Olesen <phillipolesen@digitalasset.com>"]
readme = "README.md"
license = "Apache-2.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
sphinx = "^8.2.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
sphinx-autobuild = "^2024.10.3"


[tool.poetry.group.docs.dependencies]
sphinx-design = "^0.6.1"
sphinx-copybutton = "^0.5.2"
sphinx-tabs = "^3.4.7"

